--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ test-node:
   script:
     - echo "If the files are built successfully, test some files with one command:"
     - docker-compose down -v
+    - npm install -g npm
     - COMPOSE_HTTP_TIMEOUT=200 docker-compose up --build -d
     - sleep 15
     - docker-compose exec -T node npm test
@@ -41,4 +42,5 @@ dev:
     - main-docker-local
   script:
     - docker-compose down -v
+    - npm install -g npm
     - COMPOSE_HTTP_TIMEOUT=200 docker-compose up --build -d
