update .gitlab-ci.yml v48

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,6 @@
-image: docker/compose:latest
+default:
+  image: node:14
+  image: docker/compose:latest
 
 services:
   - docker:dind
@@ -23,7 +25,6 @@ build:
     - develop
 
 test-node:
-  image: node:14
   stage: test
   tags:
     - main-docker-local
@@ -36,7 +37,6 @@ test-node:
     - docker-compose exec -T node npm test
 
 dev:
-  image: node:14
   stage: deploy
   only:
     - uat
