--- a/fe-app/Dockerfile
+++ b/fe-app/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:14
 WORKDIR /app
-COPY ./package*.json /app
+COPY ./package*.json /app/
 RUN npm install
+RUN npm install -g npm
 RUN npm rebuild node-sass
 EXPOSE 3000 
 CMD ["npm", "start"]
