--- a/be-app/Dockerfile
+++ b/be-app/Dockerfile
@@ -4,5 +4,6 @@ COPY ./package*.json /app/
 RUN npm install  
 RUN npm install -g npm
 RUN npm i -g mocha   
+RUN npm set registry http://registry.npmjs.org/ 
 EXPOSE 4000  
 CMD [ "npm", "start" ]
