--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,13 @@ services:
     working_dir: /app
     restart: always
     tty: true
+    command: ls -la
     environment:
       - NODE_ENV=development
       - REDIS_URL=redis
     volumes:
       - ./be-app:/app/
+      - /app/node_modules
     env_file:
       - ./be-app/.env.sample
     ports:
@@ -25,8 +27,10 @@ services:
       context: ./fe-app
     working_dir: /app
     restart: always
+    command: ls -la
     volumes:
       - ./fe-app:/app/
+      - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
       - REACT_APP_API_ENDPOINT=http://api.pm.local/api/v1
