--- a/fe-app/Dockerfile
+++ b/fe-app/Dockerfile
@@ -5,6 +5,6 @@ RUN npm install
 RUN npm rebuild node-sass
 RUN pwd
 RUN ls -la
-RUN ls -la node-modules
+RUN ls -la node_modules
 EXPOSE 3000 
 CMD ["npm", "start"]
