--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - REDIS_URL=redis
     volumes:
       - ./be-app:/app/
-      - /app/node_modules
+      - ./be-app/node_modules:/app/node_modules
     env_file:
       - ./be-app/.env.sample
     ports:
@@ -27,9 +27,9 @@ services:
       context: ./fe-app
     working_dir: /app
     restart: always
-    command: ls -la
     volumes:
       - ./fe-app:/app/
+      - ./fe-app/node_modules:/app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
       - REACT_APP_API_ENDPOINT=http://api.pm.local/api/v1
