--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,14 @@ services:
   node:
     build:
       context: ./be-app
-    working_dir: /app
+    working_dir: /app/
     restart: always
     tty: true
-    command: ls -la
     environment:
       - NODE_ENV=development
       - REDIS_URL=redis
     volumes:
       - ./be-app:/app/
-      - ./be-app/node_modules:/app/node_modules
     env_file:
       - ./be-app/.env.sample
     ports:
@@ -25,11 +23,10 @@ services:
   react:
     build:
       context: ./fe-app
-    working_dir: /app
+    working_dir: /app/
     restart: always
     volumes:
       - ./fe-app:/app/
-      - ./fe-app/node_modules:/app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
       - REACT_APP_API_ENDPOINT=http://api.pm.local/api/v1
