--- a/fe-app/Dockerfile
+++ b/fe-app/Dockerfile
@@ -3,8 +3,6 @@ WORKDIR /app
 COPY ./package*.json /app/
 RUN npm install
 RUN npm rebuild node-sass
-RUN pwd
-RUN ls -la
-RUN ls -la node_modules
+RUN tail package.json
 EXPOSE 3000 
 CMD ["npm", "start"]
