--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,17 @@ services:
   node:
     build:
       context: ./be-app
-    working_dir: /app/
+    working_dir: /app
     restart: always
     tty: true
     environment:
       - NODE_ENV=development
       - REDIS_URL=redis
     volumes:
-      - ./be-app:/app/
+      - ./be-app:/app
     env_file:
       - ./be-app/.env.sample
+      - /app/node_modules
     ports:
       - "4000:4000"
     depends_on:
@@ -23,10 +24,11 @@ services:
   react:
     build:
       context: ./fe-app
-    working_dir: /app/
+    working_dir: /app
     restart: always
     volumes:
-      - ./fe-app:/app/
+      - ./fe-app:/app
+      - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
       - REACT_APP_API_ENDPOINT=http://api.pm.local/api/v1
