--- a/be-app/Dockerfile
+++ b/be-app/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /app/
 COPY ./package*.json /app/
 RUN npm install  
 RUN npm i -g mocha   
-RUN tail package.json
+RUN cat package.json
 EXPOSE 4000  
 CMD [ "npm", "start" ]
