--- a/fe-app/Dockerfile
+++ b/fe-app/Dockerfile
@@ -3,6 +3,6 @@ WORKDIR /app
 COPY ./package*.json /app/
 RUN npm install
 RUN npm rebuild node-sass
-RUN tail package.json
+RUN cat package.json
 EXPOSE 3000 
 CMD ["npm", "start"]
