--- a/be-app/Dockerfile
+++ b/be-app/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:14 
 WORKDIR /app/
 COPY ./package*.json /app/
+RUN npm init
 RUN npm install  
 RUN npm i -g mocha   
 RUN cat package.json
