test .gitlab-ci.yml v59

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ test-node:
     - echo "If the files are built successfully, test some files with one command:"
     - docker-compose down -v
     - sleep 15
-    - COMPOSE_HTTP_TIMEOUT=200 docker stack deploy -c docker-compose.yml --with-registry-auth wsm-dev
+    - COMPOSE_HTTP_TIMEOUT=200 docker-compose up --build -d
     - sleep 15
     - docker-compose exec -T node npm test
 
