--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,13 @@ services:
   node:
     build:
       context: ./be-app
-    working_dir: /app
     restart: always
     tty: true
     environment:
       - NODE_ENV=development
       - REDIS_URL=redis
-    volumes:
-      - ./be-app:/app
-      - /app/node_modules
+    # volumes:
+    #   - ./be-app:/app
     env_file:
       - ./be-app/.env.sample
     ports:
@@ -24,11 +22,9 @@ services:
   react:
     build:
       context: ./fe-app
-    working_dir: /app
     restart: always
-    volumes:
-      - ./fe-app:/app
-      - /app/node_modules
+    # volumes:
+    #   - ./fe-app:/app
     environment:
       - CHOKIDAR_USEPOLLING=true
       - REACT_APP_API_ENDPOINT=http://api.pm.local/api/v1
