--- a/fe-app/Dockerfile
+++ b/fe-app/Dockerfile
@@ -1,6 +1,7 @@
 FROM node:14
 WORKDIR /app
 COPY ./package*.json /app/
+COPY . /app/
 RUN npm install
 RUN npm rebuild node-sass
 RUN cat package.json
