--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     environment:
       - NODE_ENV=development
       - REDIS_URL=redis
-    # volumes:
-    #   - ./be-app:/app
+    volumes:
+      - ./be-app:/app
     env_file:
       - ./be-app/.env.sample
     ports:
@@ -23,8 +23,8 @@ services:
     build:
       context: ./fe-app
     restart: always
-    # volumes:
-    #   - ./fe-app:/app
+    volumes:
+      - ./fe-app:/app
     environment:
       - CHOKIDAR_USEPOLLING=true
       - REACT_APP_API_ENDPOINT=http://api.pm.local/api/v1
@@ -33,16 +33,18 @@ services:
 
   nginx:
     image: nginx:latest
+    working_dir: /app
     restart: always
     ports:
       - "443:443"
       - "80:80"
     volumes:
       - ./be-app/docker/services/nginx/conf:/etc/nginx/conf.d
-    working_dir: /app
+      - ./be-app:/app
 
   db:
     image: mysql:8.0
+    working_dir: /app
     restart: always
     ports:
       - "3306:3306"
@@ -60,6 +62,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:4.6
+    working_dir: /app
     restart: always
     ports:
       - "8181:80"
@@ -72,6 +75,7 @@ services:
 
   redis:
     image: redis:latest
+    working_dir: /app
     restart: always
     command: redis-server --appendonly yes
     environment:
