test .gitlab-ci.yml v64

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     environment:
       - NODE_ENV=development
       - REDIS_URL=redis
-    # volumes:
-    #   - ./be-app:/app
+    volumes:
+      - ./be-app:/app
     env_file:
       - ./be-app/.env.sample
     ports:
@@ -23,8 +23,8 @@ services:
     build:
       context: ./fe-app
     restart: always
-    # volumes:
-    #   - ./fe-app:/app
+    volumes:
+      - ./fe-app:/app
     environment:
       - CHOKIDAR_USEPOLLING=true
       - REACT_APP_API_ENDPOINT=http://api.pm.local/api/v1
