--- a/be-app/Dockerfile
+++ b/be-app/Dockerfile
@@ -2,8 +2,8 @@ FROM node:14
 WORKDIR /app/
 COPY ./package*.json /app/
 COPY . /app/
-RUN npm install  
+RUN npm install
+RUN npm install bcrypt
 RUN npm i -g mocha   
-RUN cat package.json
 EXPOSE 4000  
 CMD [ "npm", "start" ]
