--- a/be-app/package.json
+++ b/be-app/package.json
@@ -13,8 +13,8 @@
     "pretest": "cross-env NODE_ENV=test npm run db:reset",
     "db:reset": "sequelize db:drop && sequelize db:create && sequelize db:migrate --migrations-path src/migrations",
     "db:create:test": "cross-env NODE_ENV=test sequelize db:create",
-    "test:unit": "mocha -r ts-node/register test/unit/**/*.test.ts",
-    "coverage": "\"nyc --reporter=lcov --reporter=text-summary mocha -r ts-node/register test/unit/**/*.test.ts\""
+    "test:unit": "mocha -r ts-node/register test/unit/**/*.test.ts --exit",
+    "coverage": "nyc --reporter=lcov --reporter=text-summary mocha -r ts-node/register test/unit/**/*.test.ts --exit"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
