--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,8 +21,8 @@ build:
     tags:
         - main-docker-local
     script:
-        - docker-compose down -v
-        - sleep 15
+        - docker stack rm wsm-dev
+        - sleep 10
         - docker-compose build
     only:
         - develop
@@ -49,7 +49,7 @@ dev:
         - docker node ls
     script:
         - docker-compose down -v
-        - sleep 15
+        - sleep 10
         - COMPOSE_HTTP_TIMEOUT=200 docker stack deploy -c docker-compose.yml wsm-dev
         - sleep 10
         - docker service scale wsm_dev_node=3
