--- a/be-app/.env.sample
+++ b/be-app/.env.sample
@@ -3,7 +3,7 @@ DB_PASSWORD=secret
 DB_DEV_NAME=helloworld
 DB_TEST_NAME=project_test
 
-DB_HOST=db
+DB_HOST=wsm-dev_db
 DB_PORT=3306
 
 MAIL_HOST=smtp.gmail.com
