--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,8 @@ test-node:
     stage: test
     tags:
         - main-docker-local
+    before_script:
+        - apk add bash ncurses docker-compose
     script:
         - echo "If the files are built successfully, test some files with one command:"
         - docker-compose down -v
