fix docker compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
         ports:
             - "8181:80"
         environment:
-            - PMA_HOST=wsm-dev_db
+            - PMA_HOST=db
             - PMA_USER=root
             - PMA_PASSWORD=root
         depends_on:
