--- a/be-app/config/config.json
+++ b/be-app/config/config.json
@@ -3,21 +3,21 @@
     "username": "user",
     "password": "secret",
     "database": "helloworld",
-    "host": "wsm-dev_db",
+    "host": "db",
     "dialect": "mysql"
   },
   "test": {
     "username": "user",
     "password": "secret",
     "database": "project_test",
-    "host": "wsm-dev_db",
+    "host": "db",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
     "database": "database_production",
-    "host": "wsm-dev_db",
+    "host": "db",
     "dialect": "mysql"
   }
 }
