fix docker compose file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,4 +54,4 @@ dev:
     script:
         - docker-compose down -v
         - sleep 10
-        - COMPOSE_HTTP_TIMEOUT=200 docker stack deploy -c docker-compose.yml wsm-dev
+        - docker stack deploy -c docker-compose.yml wsm-dev
