--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
             - "4000:4000"
         depends_on:
             - db
+            - nginx
             - redis
 
     react:
@@ -34,6 +35,8 @@ services:
             - REACT_APP_API_ENDPOINT=http://api.pm.local/api/v1
         ports:
             - "3000:3000"
+        depends_on:
+            - nginx
 
     nginx:
         image: nginx:latest
@@ -49,8 +52,7 @@ services:
         restart: always
         deploy:
             placement:
-                constraints:
-                    - node.role == manager
+                constraints: [node.role == manager]
         ports:
             - "3306:3306"
         command: --default-authentication-plugin=mysql_native_password
@@ -60,8 +62,10 @@ services:
             MYSQL_USER: user
             MYSQL_PASSWORD: secret
         volumes:
+            - type: bind
+              source: ./be-app/docker/services/db/data
+              target: /var/lib/mysql
             - ./be-app/docker/services/db/init:/docker-entrypoint-initdb.d
-            - ./be-app/docker/services/db/data:/var/lib/mysql
         cap_add:
             - SYS_NICE
 
@@ -76,6 +80,7 @@ services:
             - PMA_PASSWORD=root
         depends_on:
             - db
+            - nginx
 
     redis:
         image: redis:latest
@@ -87,3 +92,6 @@ services:
             - ./be-app/docker/services/redis/data:/data
         ports:
             - "6379:6379"
+
+    # volumes:
+    #     builds:
