--- a/be-app/package.json
+++ b/be-app/package.json
@@ -5,13 +5,15 @@
   "private": true,
   "scripts": {
     "start": "npm run db:migrate && nodemon -L src/index.ts",
-    "db:migrate": "npm run build:migrations && sequelize db:migrate --migrations-path src/migrations",
+    "db:migrate": "npm run build:migrations && npx sequelize db:migrate --migrations-path migrations",
     "build:migrations": "tsc -p tsconfig.migrations.json",
-    "migration:generate": "sequelize migration:generate --migrations-path src/migrations --name",
+    "migration:generate": "npx sequelize migration:generate --migrations-path migrations --name",
+    "db:seed": "npx sequelize db:seed:all",
+    "seed:generate": "npx sequelize seed:generate --seeders-path seeders --name",
     "build": "tsc",
     "test": "cross-env NODE_ENV=test mocha -r ts-node/register test/e2e/*.test.ts --exit",
     "pretest": "cross-env NODE_ENV=test npm run db:reset",
-    "db:reset": "sequelize db:drop && sequelize db:create && sequelize db:migrate --migrations-path src/migrations",
+    "db:reset": "sequelize db:drop && sequelize db:create && sequelize db:migrate --migrations-path migrations",
     "db:create:test": "cross-env NODE_ENV=test sequelize db:create",
     "test:unit": "mocha -r ts-node/register test/unit/**/*.test.ts --exit",
     "coverage": "nyc --reporter=lcov --reporter=text-summary mocha -r ts-node/register test/unit/**/*.test.ts --exit"
