--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
         #     context: ./be-app
         restart: always
         tty: true
-        # volumes:
-        #     - ./be-app:/app
-        deploy:
-            replicas: 3
+        volumes:
+            - ./be-app:/app
+        # deploy:
+        #     replicas: 3
         environment:
             - NODE_ENV=development
             - REDIS_URL=redis
@@ -27,8 +27,8 @@ services:
         # build:
         #     context: ./fe-app
         restart: always
-        # volumes:
-        #     - ./fe-app:/app
+        volumes:
+            - ./fe-app:/app
         environment:
             - CHOKIDAR_USEPOLLING=true
             - REACT_APP_API_ENDPOINT=http://api.pm.local/api/v1
@@ -77,6 +77,8 @@ services:
             - PMA_HOST=db
             - PMA_USER=root
             - PMA_PASSWORD=root
+        depends_on:
+            - db
 
     redis:
         image: redis:latest
@@ -88,3 +90,10 @@ services:
             - ./be-app/docker/services/redis/data:/data
         ports:
             - "6379:6379"
+
+    mailhog:
+        image: mailhog/mailhog
+        restart: always
+        ports:
+            - "1025:1025"
+            - "8025:8025"
