add daily logger, fix secure for checkin and reset password

--- a/be-app/package.json
+++ b/be-app/package.json
@@ -41,7 +41,8 @@
     "reflect-metadata": "^0.1.13",
     "sequelize-typescript": "^2.1.0",
     "sinon": "^11.1.2",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
