add react-helmet and fix test case

--- a/be-app/Dockerfile
+++ b/be-app/Dockerfile
@@ -3,7 +3,7 @@ WORKDIR /app/
 COPY ./package*.json /app/
 COPY . /app/
 RUN npm install
-RUN npm install -g bcrypt
+RUN npm install bcrypt
 RUN npm i -g mocha   
 EXPOSE 4000  
 CMD [ "npm", "start" ]
