--- a/fe-app/package.json
+++ b/fe-app/package.json
@@ -18,6 +18,7 @@
         "react-big-calendar": "^0.33.5",
         "react-bootstrap": "^1.6.1",
         "react-dom": "^17.0.2",
+        "react-helmet": "^6.1.0",
         "react-icons": "^4.2.0",
         "react-input-moment": "^1.7.13",
         "react-redux": "^7.2.4",
@@ -82,6 +83,7 @@
         "@types/react-big-calendar": "^0.33.0",
         "@types/react-dom": "^16.9.13",
         "@types/react-flatpickr": "^3.8.4",
+        "@types/react-helmet": "^6.1.2",
         "@types/react-redux": "^7.1.16",
         "@types/react-router-dom": "^5.1.6",
         "@typescript-eslint/eslint-plugin": "^4.26.1",
