fix code and add send mail confirm requests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ build:
         - docker stack rm wsm-dev
         - sleep 10
         - docker-compose build
+        - docker-compose down -v
     only:
         - develop
 
