remove file unnecessary

--- a/be-app/.env.sample
+++ b/be-app/.env.sample
@@ -1,7 +1,7 @@
-DB_USERNAME=user
-DB_PASSWORD=secret
-DB_DEV_NAME=helloworld
-DB_TEST_NAME=project_test
+DB_USERNAME=mysql
+DB_PASSWORD=mysql
+DB_DEV_NAME=wsmdev
+DB_TEST_NAME=wsmdev
 
 DB_HOST=db
 DB_PORT=3306
@@ -15,5 +15,5 @@ NODE_ENV=development
 PORT=4000
 SALT=10
 JWT_SECRET=abcdefghiklmnopqr
-API_CONFIRM_ACCOUNT_ENTRYPOINT=http://pm.local/confirm/account
-API_CONFIRM_RESETPASSWORD_ENTRYPOINT=http://pm.local/confirm/resetpassword
+API_CONFIRM_ACCOUNT_ENTRYPOINT=http://localhost:4000/confirm/account
+API_CONFIRM_RESETPASSWORD_ENTRYPOINT=http://localhost:4000/confirm/resetpassword
