--- a/be-app/config/config.json
+++ b/be-app/config/config.json
@@ -1,22 +1,22 @@
 {
   "development": {
-    "username": "user",
-    "password": "secret",
-    "database": "helloworld",
+    "username": "mysql",
+    "password": "mysql",
+    "database": "wsmdev",
     "host": "db",
     "dialect": "mysql"
   },
   "test": {
     "username": "user",
     "password": "secret",
-    "database": "project_test",
+    "database": "wsmtest",
     "host": "db",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "wsmprod",
     "host": "db",
     "dialect": "mysql"
   }
