--- a/be-app/package.json
+++ b/be-app/package.json
@@ -33,13 +33,17 @@
     "http-errors": "~1.6.3",
     "http-status": "^1.5.0",
     "jade": "~1.11.0",
+    "minio": "^7.0.19",
     "mocha": "^9.0.3",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.2",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "sequelize-typescript": "^2.1.0",
+    "sequelize": "^6.6.4",
+    "sequelize-cli": "^6.2.0",
     "sinon": "^11.1.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
@@ -56,9 +60,10 @@
     "@types/express": "^4.17.12",
     "@types/http-errors": "^1.8.0",
     "@types/jsonwebtoken": "^8.5.4",
+    "@types/minio": "^7.0.10",
     "@types/mocha": "^9.0.0",
     "@types/morgan": "^1.9.2",
-    "@types/node": "^15.14.7",
+    "@types/node": "^15.14.9",
     "@types/nodemailer": "^6.4.4",
     "@types/passport": "^1.0.6",
     "@types/passport-jwt": "^3.0.6",
@@ -79,10 +84,7 @@
     "eslint-plugin-import": "^2.23.4",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
-    "passport-jwt": "^4.0.0",
     "prettier": "2.3.2",
-    "sequelize": "^6.6.4",
-    "sequelize-cli": "^6.2.0",
     "supertest": "^6.1.4",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-express": "^4.1.6",
