--- a/be-app/tsconfig.json
+++ b/be-app/tsconfig.json
@@ -9,6 +9,6 @@
     "outDir": "./dist",
     "typeRoots": ["./node_modules/@types", "./src/typings"]
   },
-  "files": ["src/index.ts", "config/env.ts", "src/typings/index.d.ts"],
+  "files": ["src/index.ts", "config/env.ts"],
   "include": ["test/**/*.test.ts", "test/mocks/**/*.json", ".sequelizerc", "lib/*.ts"]
 }
