--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -33,7 +33,7 @@ services:
             - "443:443"
             - "80:80"
         volumes:
-            - ./be-app/docker/services/nginx/conf:/etc/nginx/conf.d
+            - ./be-app/.docker/services/nginx/conf:/etc/nginx/conf.d
         depends_on:
             - node
             - react
@@ -54,8 +54,8 @@ services:
             MYSQL_USER: user
             MYSQL_PASSWORD: secret
         volumes:
-            - ./be-app/docker/services/db/init:/docker-entrypoint-initdb.d
-            - ./be-app/docker/services/db/data:/var/lib/mysql
+            - ./be-app/.docker/services/db/init:/docker-entrypoint-initdb.d
+            - ./be-app/.docker/services/db/data:/var/lib/mysql
         cap_add:
             - SYS_NICE
 
@@ -78,7 +78,7 @@ services:
         environment:
             - ALLOW_EMPTY_PASSWORD=yes
         volumes:
-            - ./be-app/docker/services/redis/data:/data
+            - ./be-app/.docker/services/redis/data:/data
         ports:
             - "6379:6379"
 
