--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,95 +1,94 @@
 version: "3.6"
 
 services:
-    node:
-        # image: lampt2404/node-project:latest
-        build:
-            context: ./be-app
-        restart: always
-        tty: true
-        volumes:
-            - ./be-app:/app
-            - /app/node_modules
-        environment:
-            - NODE_ENV=development
-            - REDIS_URL=redis
-        env_file:
-            - ./be-app/.env.sample
-        ports:
-            - "4000:4000"
-        depends_on:
-            - db
-            - redis
+  node:
+    build:
+      context: ./be-app
+    restart: always
+    working_dir: /app
+    tty: true
+    volumes:
+      - ./be-app:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=development
+      - REDIS_URL=redis
+    env_file:
+      - ./be-app/.env
+    ports:
+      - "4000:4000"
+    depends_on:
+      - db
 
-    react:
-        # image: lampt2404/react-project:latest
-        build:
-            context: ./fe-app
-        restart: always
-        volumes:
-            - ./fe-app:/app
-            - /app/node_modules
-        environment:
-            - CHOKIDAR_USEPOLLING=true
-            - REACT_APP_API_ENDPOINT=http://api.pm.local/api/v1
-        ports:
-            - "3000:3000"
+  react:
+    build:
+      context: ./fe-app
+    restart: always
+    working_dir: /app
+    volumes:
+      - ./fe-app:/app
+      - /app/node_modules
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - REACT_APP_API_ENDPOINT=http://localhost:4000/api/v1
+    ports:
+      - "3000:3000"
 
-    nginx:
-        image: nginx:latest
-        restart: always
-        ports:
-            - "443:443"
-            - "80:80"
-        volumes:
-            - ./be-app/docker/services/nginx/conf:/etc/nginx/conf.d
-        depends_on:
-            - node
-            - react
+  # nginx:
+  #   image: nginx:latest
+  #   restart: always
+  #   ports:
+  #     - "443:443"
+  #     - "80:80"
+  #   volumes:
+  #     - ./be-app/.docker/services/nginx/conf:/etc/nginx/conf.d
+  #   depends_on:
+  #     - react
 
-    db:
-        image: mysql:8.0
-        restart: always
-        ports:
-            - "3306:3306"
-        command: --default-authentication-plugin=mysql_native_password
-        environment:
-            MYSQL_ROOT_PASSWORD: root
-            MYSQL_DATABASE: helloworld
-            MYSQL_USER: user
-            MYSQL_PASSWORD: secret
-        volumes:
-            - ./be-app/docker/services/db/init:/docker-entrypoint-initdb.d
-            - ./be-app/docker/services/db/data:/var/lib/mysql
-        cap_add:
-            - SYS_NICE
+  db:
+    image: mysql:8.0
+    restart: always
+    ports:
+      - "3306:3306"
+    command: --default-authentication-plugin=mysql_native_password
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: wsmdev
+      MYSQL_USER: mysql
+      MYSQL_PASSWORD: mysql
+    volumes:
+      - ./be-app/.docker/services/db/init:/docker-entrypoint-initdb.d
+      - ./be-app/.docker/services/db/data:/var/lib/mysql
+    cap_add:
+      - SYS_NICE
 
-    phpmyadmin:
-        image: phpmyadmin/phpmyadmin:4.6
-        restart: always
-        ports:
-            - "8181:80"
-        environment:
-            - PMA_HOST=db
-            - PMA_USER=root
-            - PMA_PASSWORD=root
-        depends_on:
-            - db
+  redis:
+    image: redis:latest
+    restart: always
+    command: redis-server --appendonly yes
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    volumes:
+      - ./be-app/.docker/services/redis/data:/data
+    ports:
+      - "6379:6379"
 
-    redis:
-        image: redis:latest
-        restart: always
-        command: redis-server --appendonly yes
-        environment:
-            - ALLOW_EMPTY_PASSWORD=yes
-        volumes:
-            - ./be-app/docker/services/redis/data:/data
-        ports:
-            - "6379:6379"
+  mailhog:
+    image: mailhog/mailhog
+    restart: always
+    ports:
+      - "1025:1025"
+      - "8025:8025"
 
-    mailhog:
-        image: mailhog/mailhog
-        restart: always
-        ports:
-            - "1025:1025"
-            - "8025:8025"
+  minio:
+    image: quay.io/minio/minio
+    volumes:
+      - ./be-app/.docker/services/minio:/data
+    ports:
+      - "80:9000"
+      - "9001:9001"
+    environment:
+      - MINIO_ROOT_USER=admin
+      - MINIO_ROOT_PASSWORD=admin12345
+    command: server /data --console-address ":9001"
+    restart: always
