Upload image profile with `minio`

--- a/be-app/.env.sample
+++ b/be-app/.env.sample
@@ -17,3 +17,12 @@ SALT=10
 JWT_SECRET=abcdefghiklmnopqr
 API_CONFIRM_ACCOUNT_ENTRYPOINT=http://localhost:3000/confirm/account
 API_CONFIRM_RESETPASSWORD_ENTRYPOINT=http://localhost:3000/confirm/resetpassword
+
+MINIO_HOST=minio
+MINIO_PORT=9000
+
+AWS_ACCESS_KEY_ID=admin
+AWS_SECRET_ACCESS_KEY=minioadmin
+AWS_REGION=us-west-2
+AWS_ENDPOINT=http://0.0.0.0
+AWS_BUCKET=wsm
