--- a/be-app/package.json
+++ b/be-app/package.json
@@ -19,11 +19,13 @@
     "coverage": "nyc --reporter=lcov --reporter=text-summary mocha -r ts-node/register test/unit/**/*.test.ts --exit"
   },
   "dependencies": {
+    "aws-sdk": "^2.1190.0",
     "bcrypt": "^5.0.1",
     "camelcase-keys": "^7.0.0",
     "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dayjs": "^1.10.6",
     "debug": "~2.6.9",
     "express": "~4.16.1",
@@ -41,7 +43,6 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
-    "sequelize-typescript": "^2.1.0",
     "sequelize": "^6.6.4",
     "sequelize-cli": "^6.2.0",
     "sinon": "^11.1.2",
