fix sequelize config

--- a/be-app/.env.sample
+++ b/be-app/.env.sample
@@ -1,3 +1,6 @@
+NODE_ENV=development
+PORT=4000
+
 DB_USERNAME=mysql
 DB_PASSWORD=mysql
 DB_DEV_NAME=wsmdev
@@ -5,14 +8,13 @@ DB_TEST_NAME=wsmdev
 
 DB_HOST=db
 DB_PORT=3306
+ENABLE_CONNECTION_POOL=true
 
 MAIL_HOST=mailhog
 MAIL_PORT=1025
 MAIL_USERNAME=lampt2404@gmail.com
 MAIL_PASSWORD=phamtunglam
 
-NODE_ENV=development
-PORT=4000
 SALT=10
 JWT_SECRET=abcdefghiklmnopqr
 API_CONFIRM_ACCOUNT_ENTRYPOINT=http://localhost:3000/confirm/account
@@ -25,4 +27,6 @@ AWS_ACCESS_KEY_ID=admin
 AWS_SECRET_ACCESS_KEY=minioadmin
 AWS_REGION=us-west-2
 AWS_ENDPOINT=http://0.0.0.0
-AWS_BUCKET=wsm
+
+AWS_S3_BUCKET=wsm
+AWS_S3_FORCE_PATH_STYLE=true
