--- a/be-app/tsconfig.migrations.json
+++ b/be-app/tsconfig.migrations.json
@@ -1,5 +1,5 @@
 {
     "extends": "./tsconfig",
     "files": ["config/index.ts"],
-    "include": ["src/seeders/*.js", "src/migrations/*.js", "config/config.json"]
+    "include": ["src/seeders/*.js", "src/migrations/*.js", "config/sequelize-config.js"]
 }
